--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
 baseurl = "/"
-languageCode = "en-us"
+languageCode = "swe"
 title = "Data land"
 # Enable comments by entering your Disqus shortname
 disqusShortname = "filipwastberg"
 # Enable Google Analytics by entering your tracking code
-googleAnalytics = ""
+googleAnalytics = "UA-108426846-1"
 # Define the number of posts per page
 paginate = 10
 footnotereturnlinkcontents = "↩"
