--- a/data/l10n.toml
+++ b/data/l10n.toml
@@ -1,36 +1,36 @@
 [articles]
-    read_more = "Read more"
-    words = "words"
-    readingtime = "minute read"
-    share = "Share"
-    comments = "Comments"
+    read_more = "Läs mer"
+    words = "Ord"
+    readingtime = "Minuter"
+    share = "Dela"
+    comments = "Kommentarer"
 
 # Linked older/newer posts at the bottom of each one
 [articles.linked_posts]
-    older = "Older"
-    newer = "Newer"
+    older = "Äldre inlägg"
+    newer = "Nyare inlägg"
 
 [search]
-    placeholder = "Search"
+    placeholder = "Sök"
 
 [pagination]
-    previous = "Prev"
-    next = "Next"
+    previous = "Bakåt"
+    next = "Nästa"
 
 [profile]
     follow_button = "Follow"
-    tags = "Tags"
-    posts = "Posts"
+    tags = "Taggar"
+    posts = "Inlägg"
 
 [page_not_found]
     title = "404 - page not found"
     subtitle = "The content you're looking for doesn't seem to exist."
 
 [widgets.categories]
-    title = "Categories"
+    title = "Kategorier"
 
 [widgets.recent_articles]
-    title = "Recents"
+    title = "Tidigare inlägg"
 
 [widgets.tag_cloud]
     title = "Tag cloud"
