--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "http://dataland.rbind.io/"
 languageCode = "swe"
 title = "Data land"
 # Enable comments by entering your Disqus shortname
-disqusShortname = "filipwastberg"
+disqusShortname = "dataland-rbind-io-1"
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = "UA-108426846-1"
 # Define the number of posts per page
