--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
 baseurl = "http://dataland.rbind.io/"
 languageCode = "swe"
-title = "Data land"
 # Enable comments by entering your Disqus shortname
 disqusShortname = "dataland-rbind-io-1"
 # Enable Google Analytics by entering your tracking code
@@ -9,7 +8,7 @@ googleAnalytics = "UA-108426846-1"
 paginate = 10
 footnotereturnlinkcontents = "↩"
 theme = "hugo-icarus-theme"
-favicon = "css/images/logo2.png"
+favicon = "css/images/h_logo2.png"
 # Comment the themesDir option if you use this theme in production
 
 
@@ -28,7 +27,7 @@ favicon = "css/images/logo2.png"
     # Enter your email address to display your Gravatar icon in the profile. If not set the theme
     # will fallback to the avatar.
     gravatar = ""
-    logo = "css/images/logo2.png"
+    logo = "css/images/h_logo2.png"
     disable_mathjax = false # set to true to disable MathJax
 
     # define which types of pages should be shown. By default the type with the most regular pages
