--- a/config.toml
+++ b/config.toml
@@ -11,17 +11,15 @@ theme = "hugo-icarus-theme"
 favicon = "css/images/h_logo2.png"
 # Comment the themesDir option if you use this theme in production
 
-
 [permalinks]
     post = "/:year/:month/:day/:slug"
-
 
 [params]
     # Tell me who you are
     author = "Data land"
-    bio = "En blogg om dataanalys i R."
+    bio = "A blog about data science in R."
     location = "Sweden"
-    site_description = "En blogg om data-analys i R."
+    site_description = "A blog about data science in R"
     copyright  = "Powered by [Hugo](//gohugo.io). Theme by [PPOffice](http://github.com/ppoffice)."
     avatar = "css/images/fwg.png"
     # Enter your email address to display your Gravatar icon in the profile. If not set the theme
@@ -48,17 +46,17 @@ favicon = "css/images/h_logo2.png"
 # and "Tags" / "Categories" after them.
 [[params.menu]]
     before = true
-    label  = "Hem"
+    label  = "Home"
     link   = "/"
 
 [[params.menu]]
     before = false
-    label  = "Taggar"
+    label  = "Tags"
     link   = "tags/"
 
 [[params.menu]]
     before = false
-    label  = "Kategorier"
+    label  = "Categories"
     link   = "categories/"
 
 # Enter a link for the follow button on the left
