--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "http://dataland.rbind.io/"
-languageCode = "swe"
+languageCode = "eng"
 # Enable comments by entering your Disqus shortname
 disqusShortname = "dataland-rbind-io-1"
 # Enable Google Analytics by entering your tracking code
