--- a/config.toml
+++ b/config.toml
@@ -1,105 +1,36 @@
-baseurl = "http://dataland.rbind.io/"
-languageCode = "eng"
-# Enable comments by entering your Disqus shortname
-disqusShortname = "dataland-rbind-io-1"
-# Enable Google Analytics by entering your tracking code
+baseurl = "http://dataland.rbind.io"
+theme = "cocoa-eh"
+builddrafts = true
+canonifyurls = true
+contentdir = "content"
+languageCode = "en-US"
+layoutdir = "layouts"
+publishdir = "public"
+author = "Filip Wästberg"
+title = "Dataland"
+disqusshortname = "dataland-rbind-io-1"
+pluralizelisttitles = false
 googleAnalytics = "UA-108426846-1"
-# Define the number of posts per page
-paginate = 10
-footnotereturnlinkcontents = "↩"
-theme = "hugo-icarus-theme"
-favicon = "css/images/h_logo2.png"
-# Comment the themesDir option if you use this theme in production
 
 [permalinks]
-    post = "/:year/:month/:day/:slug"
+blog = "blog/:slug/"
 
 [params]
-    # Tell me who you are
-    author = "Data land"
-    bio = "A blog about data science in R."
-    location = "Sweden"
-    site_description = "A blog about data science in R"
-    copyright  = "Powered by [Hugo](//gohugo.io). Theme by [PPOffice](http://github.com/ppoffice)."
-    avatar = "css/images/fwg.png"
-    # Enter your email address to display your Gravatar icon in the profile. If not set the theme
-    # will fallback to the avatar.
-    gravatar = ""
-    logo = "css/images/h_logo2.png"
-    disable_mathjax = false # set to true to disable MathJax
-
-    # define which types of pages should be shown. By default the type with the most regular pages
-    mainSections = ["post"]
-
-    # Format dates with Go's time formatting
-    date_format = "2006-01-02"
-
-    # Add custom assets with their paths relative to the static folder
-	custom_css = []
-	custom_js  = []
-
-# Create custom menu entries by defining a label and a link for
-# them. Since you can also link posts, you've the option the
-# place the links before or after them.
-#
-# E.g.: "Home" appears before all linked posts in the menu
-# and "Tags" / "Categories" after them.
-[[params.menu]]
-    before = true
-    label  = "Home"
-    link   = "/"
-
-[[params.menu]]
-    before = false
-    label  = "Tags"
-    link   = "tags/"
-
-[[params.menu]]
-    before = false
-    label  = "Categories"
-    link   = "categories/"
-
-# Enter a link for the follow button on the left
-[params.profile]
-    follow_button = "https://github.com/filipwastberg"
-
-
-[social]
-# Add your social network accounts to the profile section on the left
-# by entering your username. The links to your account will be
-# created automatically.
-    github          = "filipwastberg"
-    gitlab          = ""
-    bitbucket       = ""
-    jsfiddle        = ""
-    codepen         = ""
-    foursquare      = ""
-    dribbble        = ""
-    deviantart      = ""
-    behance         = ""
-    flickr          = ""
-    instagram       = ""
-    youtube         = ""
-    vimeo           = ""
-    vine            = ""
-    medium          = ""
-    wordpress       = ""
-    tumblr          = ""
-    xing            = ""
-    linkedin        = ""
-    slideshare      = ""
-    stackoverflow   = ""
-    reddit          = ""
-    pinterest       = ""
-    googleplus      = ""
-    facebook        = ""
-    facebook_admin  = ""
-    twitter_domain  = ""
-    twitter         = "filipwastberg"
-
-# Enable and disable widgets for the right sidebar
-[params.widgets]
-    recent_articles = true
-    categories = false
-    tags = false
-    tag_cloud = false
+dateform = "Jan 2, 2006"
+dateformfull = "Mon Jan 2 2006 15:04:05 MST"
+description = "Example blog"
+copyright = "Copyright © 2019 Filip Wästberg"
+logofile = "css/images/h_logo_no_text1.png"
+favicon = ""
+highlightjs = true
+progressively = true
+align_left = false
+lang = "en"
+github = "filipwastberg"
+email = "filip.wastberg@gmail.com"
+linkedin = "filipwastberg"
+twitter = "filipwastberg"
+social_banner = "img/banner.png"
+posts_navigation = true
+small_banner_logo = false
+latestpostcount = 5
