--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,8 @@ disqusshortname = ""
 pluralizelisttitles = false
 disableKinds = ["taxonomy", "taxonomyTerm"]
 
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+
 [permalinks]
 blog = "blog/:slug/"
 
